# arcat

./: README.md  pyproject.toml  version.py
.github/workflows/: ci.yml  python-publish.yml
.github/workflows/.ipynb_checkpoints/: python-publish-checkpoint.yml
.ipynb_checkpoints/: README-checkpoint.md  pyproject-checkpoint.toml  setup-checkpoint.cfg
arcat/: __init__.py  core.py  xarray_wrapper.py
arcat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
arcat/.ipynb_checkpoints/: core-checkpoint.py  utils-checkpoint.py
benchmarks/.ipynb_checkpoints/: benchmark-checkpoint.py
docs/source/: conf.py
docs_/: index.rst
docs_/.ipynb_checkpoints/: api-checkpoint.rst  conf-checkpoint.py
tests/: test_core.py
